# pibackup

./: .gitignore  README.md  claude.md  pyproject.toml
deploy/: README.md  install.sh  pibackup-agent.service  pibackup-backup.service  pibackup-backup.timer  pibackup-server.service
docs/: PLAN.md
src/pibackup/: __init__.py
src/pibackup/client/: __init__.py  agent.py  api.py  cancel.py  cli.py  data.py  engine.py  enroll.py  keys.py  reporter.py  restore.py  runner.py  tui.py  update.py
src/pibackup/common/: __init__.py  archive.py  auth.py  config.py  crypto.py  db.py  logging.py  manifest.py  models.py  store.py  transfer.py
src/pibackup/server/: __init__.py  app.py  dashboard.py  provision.py  retention.py  store.py
tests/: conftest.py  test_phase1.py  test_phase10_admin.py  test_phase10_commands.py  test_phase11_update.py  test_phase12_crossclient.py  test_phase12_tui.py  test_phase12_web.py  test_phase13_group.py  test_phase14_service.py  test_phase15_bytes.py  test_phase16_running.py  test_phase17_archive.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9_progress.py  test_smoke.py  test_ssh_transport.py
